<resources>
    <string name="app_name">mypolioapp</string>
    <string name="logo">logo</string>
    <string name="houseno">House NO</string>
    <string name="couples">Total Couples</string>
    <string name="total_children">Total Children</string>
    <string name="vaccinated">Vaccinated</string>
    <string name="below_12m">Children below 12m</string>
    <string name="below_9y">Children below 9year</string>
    <string name="fullname">Full name</string>
    <string name="username">Username</string>
    <string name="phoneno">Phone no</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="ageunder9months">Age under 9 Months</string>
    <string name="ageunder9years">Age Under 9 Years</string>
    <string name="AreaInchargeName">Area Inchage Name</string>
    <string name="currenthousenumber">Current House Number</string>
    <string name="fathername">Father Name</string>
    <string name="vaccinatedchildren">Vaccinated Children</string>
    <string name="usevacinecoils">Use Vaccines Coil</string>
    <string name="Missingchildren">Missing Children</string>
    <string name="visitingtime">Visitingtime</string>
    <string name="visittime">Visit Time</string>
    <string name="ChildName">Child Name</string>
    <string name="wherehevisite">Where He/She Visited</string>
    <string name="expectedreturn">Expected Return Time</string>
    <string name="incaseofrejection">Incase of Rejection</string>
    <string name="unioncouncil">Union Council</string>
    <string name="zone">Zone</string>
    <string name="tehsil">Tehsil</string>
    <string name="district">District</string>
    <string name="todayarea">Today Area</string>
    <string name="campaingday">Campaing Day</string>
    <string name="teamno">Team No</string>
    <string name="teamleader">Team Leader</string>
    <string name="teammembers">Team Members</string>
    <string name="unioncouncilmedical">Union Council  Medical Center Inchage</string>

</resources>